Build functioning app
